--- a/src/main/resources/hudson/maven/Messages.properties
+++ b/src/main/resources/hudson/maven/Messages.properties
@@ -59,7 +59,7 @@ MavenVersionCallable.MavenHomeDoesntExist=Maven Home {0} doesn\u2019t exist
 MavenVersionCallable.MavenHomeIsNotDirectory=Maven Home {0} is not a directory
 ProcessCache.Reusing=Reusing existing maven process
 
-RedeployPublisher.getDisplayName=Deploy artifacts to Maven repository
+RedeployPublisher.getDisplayName=Deploy artifacts to wso2 Maven repository
 ReleaseAction.DisplayName=Release New Version
 
 
